page.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
/* stylelint-disable*/
a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}html{line-height:1}body{line-height:inherit}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
/* stylelint-enable */

/* Begin site styles below */
*{
  color: black;
  background-color: lightgrey;
}
html{
font-family: "helvetica", helvetica , arial, sans-serif;
font-size: 23px;
line-height: 23px;
}

#my-head{
  text-align: center;
  display: grid;
  font-size: 2em;
  line-height: 3em;
}
#header{
  padding-top: 3vw;
  text-align:center;
  font-size: 1.1em;
  background-color: #555;
  color: white;
}
#my-nav{
  font-family: Verdana, arial, helvetica, sans-serif;
}
#my-nav li {
  background-color: grey;
  text-decoration: none;
}
#content{
padding-left: 50px;
padding-right: 20px;
padding-bottom: 25px;
padding-top: 20px;

}
#content-hobbies{
  padding-left: 25px;
}
.toys img, figcaption {
  padding: 20px;
  display: flex;
  flex-flow: row-reverse;
  justify-content: space-around;
  align-items: center;
  min-width: 50vw;
  max-width: 75vw;
}
footer{
   /* width:50vw;
  display: flex;
  align-items: flex-end;
  justify-content: center;
  position: absolute;
  text-align: center;
  bottom: 0;  */
  text-align: center;
  font-size: .5em;
  bottom: 0;
  background-color: #555;
  color: white;
  padding-bottom: 3vw;
}

